# continuous-wave

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CODEBASE_REVIEW_REPORT.md  CONTRIBUTING.md  CONTRIBUTION_IMPROVEMENT_PLAN.md  DECODER_FIXES_NEEDED.md  MANIFEST.in  Makefile  README.md  WORKFLOW_CHECKS.md  analyze_wav.py  check_wav_timing.py  debug_decode.py  debug_locking.py  debug_pipeline.py  generate_morse_wav.py  generate_w2asm_with_leader.py  pyproject.toml  regenerate_all_test_wavs.py  requirements-dev.txt  requirements.txt  test_decode.py  test_with_higher_snr.py
.claude/: CLEANUP_REPORT_2025-11-19.md  NEXT_TASK_AGENT.md  README.md  SessionStart
.claude/agents/: pr-review.md
.claude/commands/: README.md  cleanup.md  next-task.md  pr-review.md  pre-pr.md
.claude/plans/: DECODER_FIXES_NEEDED.md  INDEX.md  TYPING_ISSUES.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  DESIGN.md  TROUBLESHOOTING.md
docs/plans/: CONTRIBUTION_IMPROVEMENT_PLAN.md
hooks/: README.md  install-hooks.sh  pre-commit
scripts/: check-types.sh  generate_morse_wav.py  next_task_agent.py  validate-patch.sh
scripts/debug/: test_freq_detector.py  test_with_higher_snr.py
src/continuous_wave/: __init__.py  __main__.py  cli.py  config.py  logging.py  models.py  pipeline.py  protocols.py
src/continuous_wave/audio/: __init__.py  file.py  soundcard.py
src/continuous_wave/decoder/: __init__.py  morse.py
src/continuous_wave/detection/: __init__.py  frequency.py  tone.py
src/continuous_wave/signal/: noise.py
src/continuous_wave/timing/: __init__.py  adaptive.py
tests/: conftest.py
tests/integration/: test_wav_decoding.py
tests/integration/fixtures/wav_files/: README.md  generate_challenging_wav.py  generate_test_wav.py
tests/unit/: test_adaptive_timing.py  test_agc.py  test_bandpass.py  test_config.py  test_logging.py  test_models.py  test_morse_decoder.py  test_noise_pipeline.py  test_pipeline.py  test_squelch.py
